Added some styling

--- a/index.html
+++ b/index.html
@@ -51,10 +51,14 @@
 <div class="battle">
     <div class="playerwep">
         <h1 class="weptext">you picked</h1>
-        <div class="emptywep">
+        <div class="outer-ring">
+             <div class="inner-ring">
+                   <div id="emptywep">
             <div class="weapon"><div class="pweapon-image"></div></div>
         </div>
     </div>
+             </div>
+        </div>   
     <div class="result">
         <div class="tie">
             <h1>I'ts a tie</h1>
@@ -72,11 +76,18 @@
         </div>
     
     </div> 
-    <div class="computerwep">
+    <div class="computerwep ">
         <h1 class="weptext">the house picked</h1>
-        <div class="emptywep">
-            <div class="computerweapon"><div class="cweapon-image"></div></div>
+            <div class="outer-ring2">
+                <div class="inner-ring2">
+                <div class="emptywep2" id="emptywep">
+            <div class="computerweapon">
+                <div class="cweapon-image">
+                </div>
+            </div>
         </div>
+            </div>
+            </div>   
     </div>
 </div>
 
